//
// Licensed to the Apache Software Foundation (ASF) under one or more
// contributor license agreements.  See the NOTICE file distributed with
// this work for additional information regarding copyright ownership.
// The ASF licenses this file to You under the Apache License, Version 2.0
// (the "License"); you may not use this file except in compliance with
// the License.  You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
package org.apache.activemq.apollo.store.cassandra;

option java_multiple_files = true;

message PBMessageRecord {
  required bytes protocol = 1 [java_override_type = "AsciiBuffer"];
  required int32 size = 2;
  optional bytes value = 3;
  optional int64 stream = 4;
  optional int64 expiration = 5;
}

message PBQueueEntryRecord {
  required int64 messageKey = 1;
  optional bytes attachment = 2;
  optional int32 size = 3;
  optional int32 redeliveries = 4;
}

message PBQueueRecord {
  required int64 key=1;
  optional bytes binding_kind = 2 [java_override_type = "AsciiBuffer"];
  optional bytes binding_data = 3;
}